Fix cards layout issue

--- a/public/index.css
+++ b/public/index.css
@@ -65,6 +65,15 @@ html {
 
 .card {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .card.purchased .card-details > div:not(.purchase-date) {
@@ -75,11 +84,15 @@ html {
   height: 220px;
   overflow: hidden;
   margin-top: 10px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card-image {
   width: 100%;
-  height: 200px;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -106,6 +119,15 @@ html {
   font-weight: bold;
   color: var(--f7-theme-color);
   margin-bottom: 10px;
+}
+
+.card:not(.purchased) .card-image-container {
+  margin-top: 36px; /* Adjust this value to match the height of the purchase date text */
+}
+
+.bought-button[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 @media (max-width: 768px) {
